// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`published artifacts > dist/cjs/index.d.ts is unchanged 1`] = `
"import { Combiner, CreateSelectorFunction, CreateSelectorOptions, GetParamsFromSelectors, GetStateFromSelectors, OutputSelector, Selector, SelectorArray, SelectorResultsMap, SelectorsObject } from "reselect";
//#region src/cache/types.d.ts
interface ICacheObject {
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
  isValidCacheKey?(key: any): boolean;
}
type ObjectCacheKey = string | number;
//#endregion
//#region src/typeUtils.d.ts
/**
 * Distributes a union \`A | B | C\` into an intersection \`A & B & C\` by exploiting
 * contravariance of function parameters. Building block for {@link LastOf}.
 */
type UnionToIntersection<Union> = (Union extends unknown ? (distributedUnion: Union) => void : never) extends ((mergedIntersection: infer Intersection) => void) ? Intersection : never;
/**
 * Extracts the "last" member of a union. Order is an implementation detail of
 * the compiler's overload resolution, but it is stable, which is all
 * {@link TuplifyUnion} needs to peel members off one at a time.
 */
type LastOf<T> = UnionToIntersection<T extends any ? () => T : never> extends (() => infer R) ? R : never;
/**
 * Converts a union \`A | B | C\` into a tuple \`[A, B, C]\` by repeatedly pulling
 * off {@link LastOf} and excluding it until the union is \`never\`.
 */
type TuplifyUnion<T, L = LastOf<T>, N = [T] extends [never] ? true : false> = true extends N ? [] : [...TuplifyUnion<Exclude<T, L>>, L];
/**
 * Type-level \`Object.values()\`: converts a SelectorsObject
 * \`{ foo: Selector, bar: Selector }\` into the ordered tuple
 * \`[Selector, Selector]\` that reselect's \`MergeParameters\` needs to infer
 * state and params. An unordered \`Array<T[keyof T]>\` collapses the selectors
 * to a union and loses per-position params (second args resolve to \`never\`),
 * so a real tuple is required. Mirrors reselect's internal
 * \`ObjectValuesToTuple\` (not exported from the package).
 */
type SelectorsObjectToTuple<T extends SelectorsObject<any>, KS extends any[] = TuplifyUnion<keyof T>, R extends Selector[] = []> = KS extends [infer K, ...infer KT] ? SelectorsObjectToTuple<T, KT, [...R, T[K & keyof T]]> : R;
/**
 * \`true\` only for \`any\`. Relies on \`any\` being the one type for which
 * \`0 extends 1 & T\` holds, since \`1 & any\` is \`any\`.
 */
type IsAny<T> = 0 extends 1 & T ? true : false;
/** The \`state\` parameter of a single input selector. */
type StateOfSelector<S> = S extends ((state: infer State, ...args: any[]) => any) ? State : never;
/** \`IsAny<state>\` for every input selector, as a \`true | false\` union. */
type AnyStateFlags<InputSelectors extends SelectorArray> = InputSelectors[number] extends (infer InputSelector) ? InputSelector extends unknown ? IsAny<StateOfSelector<InputSelector>> : never : never;
/**
 * \`true\` when some input selectors declare a concrete \`state\` and others fall
 * back to \`any\`.
 *
 * reselect v5 cannot contextually type an inline input selector while it is
 * still inferring the input tuple, so an unannotated \`(state) => state.foo\`
 * sitting next to an annotated one silently resolves to \`any\` — and that \`any\`
 * then propagates into the combiner arguments and the selector's result. The
 * old hand-written per-arity overloads typed those selectors correctly, so an
 * upgrade would quietly drop type safety rather than report anything.
 *
 * Flagging the mixed case restores a diagnostic. A uniformly-\`any\` selector
 * list is left alone: that shape is a deliberate opt-out, not an accident.
 */
type HasMixedAnyState<InputSelectors extends SelectorArray> = true extends AnyStateFlags<InputSelectors> ? false extends AnyStateFlags<InputSelectors> ? true : false : false;
//#endregion
//#region src/types.d.ts
/**
 * A function which takes the same arguments as the selector and returns a cacheKey.
 * The cacheKey is used to look up the matching reselect selector in the cache.
 */
type KeySelector<S> = (state: S, ...args: any[]) => any;
/**
 * The \`keySelector\` shape offered at call sites.
 *
 * The params tuple is **open-ended**: it starts with the params the input
 * selectors declare (so \`(state, id) => id\` still gets \`id\` typed) and then
 * accepts further arguments the input selectors know nothing about. That extra
 * tail is re-reselect's signature pattern — a cache dimension that exists only
 * to pick a cacheKey, as in \`(state, props) => props.itemId\` over input
 * selectors that read \`state\` alone. Closing the tuple here would reject it.
 */
type TypedKeySelector<InputSelectors extends SelectorArray> = (state: GetStateFromSelectors<InputSelectors>, ...params: [...GetParamsFromSelectors<InputSelectors>, ...any[]]) => unknown;
/**
 * A \`keySelector\` that declares exactly the input selectors' params, i.e. adds
 * no cache dimension of its own. Used as the default when the concrete
 * keySelector type is unknown (a \`keySelectorCreator\`, or a hand-written
 * \`OutputCachedSelector<Inputs, Result>\`), so merging it back in is a no-op.
 */
type DefaultKeySelector<InputSelectors extends SelectorArray> = Selector<GetStateFromSelectors<InputSelectors>, unknown, GetParamsFromSelectors<InputSelectors>>;
/**
 * The arguments the finished selector accepts: the input selectors' params
 * merged with any extra params the \`keySelector\` declares.
 *
 * Appending the keySelector to the selector array and reusing reselect's own
 * \`GetParamsFromSelectors\` keeps one merge implementation instead of a
 * hand-rolled one — reselect takes the longest params tuple and intersects it
 * element-wise, which is exactly the desired semantics: the caller has to
 * satisfy the input selectors *and* the keySelector, since both receive the
 * same arguments at runtime.
 */
type CachedSelectorParams<InputSelectors extends SelectorArray, KeySelectorFn> = KeySelectorFn extends ((...args: any[]) => any) ? GetParamsFromSelectors<[...InputSelectors, KeySelectorFn]> : GetParamsFromSelectors<InputSelectors>;
/**
 * A function which receives the selector's inputSelectors/resultFunc/keySelector
 * and returns the keySelector to be used at runtime.
 */
type KeySelectorCreator<InputSelectors extends SelectorArray, Result> = (selectorInputs: {
  inputSelectors: InputSelectors;
  resultFunc: Combiner<InputSelectors, Result>;
  keySelector?: TypedKeySelector<InputSelectors>;
}) => TypedKeySelector<InputSelectors>;
type CreateCachedSelectorOptions<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = {
  keySelector?: KeySelectorFn;
  cacheObject?: ICacheObject;
  selectorCreator?: CreateSelectorFunction<any, any, any>;
  keySelectorCreator?: KeySelectorCreator<InputSelectors, Result>;
};
/**
 * The selector instance returned by \`createCachedSelector(...)(...)\`.
 *
 * This type is reconstructed from a plain reselect \`Selector\` plus **only** the
 * members re-reselect actually attaches at runtime (see
 * \`createCachedSelector.ts\`'s \`Object.assign\`). It intentionally does **not**
 * inherit reselect's full \`OutputSelector\`: that would advertise members which
 * only exist on the inner, per-cache-key reselect selectors (\`memoizedResultFunc\`,
 * \`lastResult\`, \`dependencyRecomputations\`, \`resetDependencyRecomputations\`,
 * \`memoize\`, \`argsMemoize\`, …) — they are absent on the cached selector at
 * runtime, so surfacing them would type-check and then crash.
 *
 * \`getMatchingSelector\` returns the full \`OutputSelector\` because the inner
 * cached selector genuinely is a reselect selector.
 *
 * \`.keySelector\` is exposed using the loose \`KeySelector<State>\` shape rather
 * than the precise \`TypedKeySelector<InputSelectors>\` for back-compat with
 * consumers that test the type against \`KeySelector<State>\`.
 */
type OutputCachedSelector<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = Selector<GetStateFromSelectors<InputSelectors>, Result, CachedSelectorParams<InputSelectors, KeySelectorFn>> & Pick<OutputSelector<InputSelectors, Result>, 'resultFunc' | 'dependencies' | 'recomputations' | 'resetRecomputations'> & {
  getMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeySelectorFn>) => OutputSelector<InputSelectors, Result>;
  removeMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeySelectorFn>) => void;
  clearCache: () => void;
  cache: ICacheObject;
  keySelector: KeySelector<GetStateFromSelectors<InputSelectors>>;
};
/**
 * The curried second-call argument: a \`keySelector\` function or an options object.
 */
type PolymorphicCachedOptions<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = KeySelectorFn | CreateCachedSelectorOptions<InputSelectors, Result, KeySelectorFn>;
/**
 * Message surfaced when input selectors mix a concrete \`state\` with an
 * implicit \`any\` one. It is the *parameter* type of the returned factory, so
 * the compiler prints the sentence itself at the \`(keySelector)\` call rather
 * than a bare "not callable".
 */
type ImplicitAnyStateError = '[re-reselect] Some input selectors have an implicitly \`any\` state while others are typed, so the combiner arguments and the result silently degrade to \`any\`. Annotate \`state\` on every input selector, or pre-type them with createCachedSelector.withTypes<State>().';
/**
 * The curried second call of \`createCachedSelector(...)\`.
 *
 * Generic over the supplied \`keySelector\` so a cache dimension declared only
 * there — re-reselect's signature pattern — flows into the finished selector's
 * own call signature (see {@link CachedSelectorParams}).
 *
 * Degrades to a single-parameter function typed with {@link ImplicitAnyStateError}
 * when {@link HasMixedAnyState} holds, turning what used to be a silent \`any\`
 * into a compile error that names the fix.
 */
type CachedSelectorFactory<InputSelectors extends SelectorArray, Result> = HasMixedAnyState<InputSelectors> extends true ? (error: ImplicitAnyStateError) => never : {
  <KeySelectorFn extends TypedKeySelector<InputSelectors>>(keySelector: KeySelectorFn): OutputCachedSelector<InputSelectors, Result, KeySelectorFn>;
  <KeySelectorFn extends TypedKeySelector<InputSelectors>>(options: CreateCachedSelectorOptions<InputSelectors, Result, KeySelectorFn>): OutputCachedSelector<InputSelectors, Result, KeySelectorFn>;
};
/**
 * Input selectors spread as individual arguments.
 *
 * Only available while \`StateType\` is still \`any\`. Once \`withTypes<State>()\`
 * has pinned it, reselect's tuple inference cannot both apply the contextual
 * state and infer the input tuple out of a variadic rest, and the combiner
 * arguments collapse to \`never\` — the call type-checks and produces a useless
 * selector. Dropping these signatures turns that into "No overload matches
 * this call" and points at the array form, which does work.
 */
interface VariadicCachedSelectorSignatures<StateType> {
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>]): CachedSelectorFactory<InputSelectors, Result>;
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>, createSelectorOptions: CreateSelectorOptions]): CachedSelectorFactory<InputSelectors, Result>;
}
/** Input selectors passed as a single array argument. Always available. */
interface ArrayCachedSelectorSignatures<StateType> {
  <InputSelectors extends SelectorArray<StateType>, Result>(inputSelectors: [...InputSelectors], combiner: Combiner<InputSelectors, Result>, createSelectorOptions?: CreateSelectorOptions): CachedSelectorFactory<InputSelectors, Result>;
}
/**
 * Just the callable signatures of \`createCachedSelector\`, without \`withTypes\`.
 * Split out so the runtime implementation can be typed against it directly
 * (TypeScript's \`Omit\` strips call signatures, so this can't be derived from
 * \`CreateCachedSelector\` after the fact).
 *
 * Tuple inference replaces the old per-arity overload duplication, mirroring
 * reselect's \`CreateSelectorFunction\` pattern.
 *
 * \`StateType\` is the state type shared by all input selectors. It defaults to
 * \`any\` and is narrowed via \`withTypes\` to pre-type the selector creator.
 */
type CreateCachedSelectorImpl<StateType = any> = (IsAny<StateType> extends true ? VariadicCachedSelectorSignatures<StateType> : unknown) & ArrayCachedSelectorSignatures<StateType>;
/**
 * The full \`createCachedSelector\` surface: callable signatures plus the
 * \`withTypes\` helper for pre-typing the state.
 */
type CreateCachedSelector<StateType = any> = CreateCachedSelectorImpl<StateType> & {
  /**
   * Creates a "pre-typed" version of \`createCachedSelector\` where the \`state\`
   * type is predefined.
   *
   * This lets you set the \`state\` type once, removing the need to specify it
   * on every input selector across all \`createCachedSelector\` calls.
   *
   * Pre-typed creators accept the array form of input selectors only.
   *
   * @returns A pre-typed \`createCachedSelector\` with the state type baked in.
   */
  withTypes: <OverrideStateType extends StateType>() => CreateCachedSelector<OverrideStateType>;
};
//#endregion
//#region src/createCachedSelector.d.ts
declare const createCachedSelector: CreateCachedSelector;
//#endregion
//#region src/createStructuredCachedSelector.d.ts
/**
 * The returned thunk preserves the cached-selector public surface
 * (\`getMatchingSelector\`, \`removeMatchingSelector\`, \`clearCache\`, \`cache\`,
 * \`keySelector\`, plus reselect's \`OutputSelector\` fields) and exposes
 * the structured shape as the selector's \`Result\`.
 */
type StructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>> = (polymorphicOptions: PolymorphicCachedOptions<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>) => OutputCachedSelector<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>;
declare function createStructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>>(selectors: InputSelectorsObject): StructuredCachedSelector<InputSelectorsObject>;
//#endregion
//#region src/cache/FlatObjectCache.d.ts
declare class FlatObjectCache implements ICacheObject {
  private _cache;
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/FifoObjectCache.d.ts
declare class FifoObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/LruObjectCache.d.ts
declare class LruObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
  private _registerCacheHit;
  private _deleteCacheHit;
}
//#endregion
//#region src/cache/FlatMapCache.d.ts
declare class FlatMapCache implements ICacheObject {
  private _cache;
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/FifoMapCache.d.ts
declare class FifoMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/LruMapCache.d.ts
declare class LruMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
export { type CachedSelectorFactory, type CachedSelectorParams, type CreateCachedSelector, type CreateCachedSelectorOptions, type DefaultKeySelector, FifoMapCache, FifoObjectCache, FlatMapCache, FlatObjectCache, type ICacheObject, type ImplicitAnyStateError, type KeySelector, type KeySelectorCreator, LruMapCache, LruObjectCache, type OutputCachedSelector, type TypedKeySelector, createCachedSelector, createStructuredCachedSelector };
//# sourceMappingURL=index.d.ts.map"
`;

exports[`published artifacts > dist/es/index.d.mts is unchanged 1`] = `
"import { Combiner, CreateSelectorFunction, CreateSelectorOptions, GetParamsFromSelectors, GetStateFromSelectors, OutputSelector, Selector, SelectorArray, SelectorResultsMap, SelectorsObject } from "reselect";
//#region src/cache/types.d.ts
interface ICacheObject {
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
  isValidCacheKey?(key: any): boolean;
}
type ObjectCacheKey = string | number;
//#endregion
//#region src/typeUtils.d.ts
/**
 * Distributes a union \`A | B | C\` into an intersection \`A & B & C\` by exploiting
 * contravariance of function parameters. Building block for {@link LastOf}.
 */
type UnionToIntersection<Union> = (Union extends unknown ? (distributedUnion: Union) => void : never) extends ((mergedIntersection: infer Intersection) => void) ? Intersection : never;
/**
 * Extracts the "last" member of a union. Order is an implementation detail of
 * the compiler's overload resolution, but it is stable, which is all
 * {@link TuplifyUnion} needs to peel members off one at a time.
 */
type LastOf<T> = UnionToIntersection<T extends any ? () => T : never> extends (() => infer R) ? R : never;
/**
 * Converts a union \`A | B | C\` into a tuple \`[A, B, C]\` by repeatedly pulling
 * off {@link LastOf} and excluding it until the union is \`never\`.
 */
type TuplifyUnion<T, L = LastOf<T>, N = [T] extends [never] ? true : false> = true extends N ? [] : [...TuplifyUnion<Exclude<T, L>>, L];
/**
 * Type-level \`Object.values()\`: converts a SelectorsObject
 * \`{ foo: Selector, bar: Selector }\` into the ordered tuple
 * \`[Selector, Selector]\` that reselect's \`MergeParameters\` needs to infer
 * state and params. An unordered \`Array<T[keyof T]>\` collapses the selectors
 * to a union and loses per-position params (second args resolve to \`never\`),
 * so a real tuple is required. Mirrors reselect's internal
 * \`ObjectValuesToTuple\` (not exported from the package).
 */
type SelectorsObjectToTuple<T extends SelectorsObject<any>, KS extends any[] = TuplifyUnion<keyof T>, R extends Selector[] = []> = KS extends [infer K, ...infer KT] ? SelectorsObjectToTuple<T, KT, [...R, T[K & keyof T]]> : R;
/**
 * \`true\` only for \`any\`. Relies on \`any\` being the one type for which
 * \`0 extends 1 & T\` holds, since \`1 & any\` is \`any\`.
 */
type IsAny<T> = 0 extends 1 & T ? true : false;
/** The \`state\` parameter of a single input selector. */
type StateOfSelector<S> = S extends ((state: infer State, ...args: any[]) => any) ? State : never;
/** \`IsAny<state>\` for every input selector, as a \`true | false\` union. */
type AnyStateFlags<InputSelectors extends SelectorArray> = InputSelectors[number] extends (infer InputSelector) ? InputSelector extends unknown ? IsAny<StateOfSelector<InputSelector>> : never : never;
/**
 * \`true\` when some input selectors declare a concrete \`state\` and others fall
 * back to \`any\`.
 *
 * reselect v5 cannot contextually type an inline input selector while it is
 * still inferring the input tuple, so an unannotated \`(state) => state.foo\`
 * sitting next to an annotated one silently resolves to \`any\` — and that \`any\`
 * then propagates into the combiner arguments and the selector's result. The
 * old hand-written per-arity overloads typed those selectors correctly, so an
 * upgrade would quietly drop type safety rather than report anything.
 *
 * Flagging the mixed case restores a diagnostic. A uniformly-\`any\` selector
 * list is left alone: that shape is a deliberate opt-out, not an accident.
 */
type HasMixedAnyState<InputSelectors extends SelectorArray> = true extends AnyStateFlags<InputSelectors> ? false extends AnyStateFlags<InputSelectors> ? true : false : false;
//#endregion
//#region src/types.d.ts
/**
 * A function which takes the same arguments as the selector and returns a cacheKey.
 * The cacheKey is used to look up the matching reselect selector in the cache.
 */
type KeySelector<S> = (state: S, ...args: any[]) => any;
/**
 * The \`keySelector\` shape offered at call sites.
 *
 * The params tuple is **open-ended**: it starts with the params the input
 * selectors declare (so \`(state, id) => id\` still gets \`id\` typed) and then
 * accepts further arguments the input selectors know nothing about. That extra
 * tail is re-reselect's signature pattern — a cache dimension that exists only
 * to pick a cacheKey, as in \`(state, props) => props.itemId\` over input
 * selectors that read \`state\` alone. Closing the tuple here would reject it.
 */
type TypedKeySelector<InputSelectors extends SelectorArray> = (state: GetStateFromSelectors<InputSelectors>, ...params: [...GetParamsFromSelectors<InputSelectors>, ...any[]]) => unknown;
/**
 * A \`keySelector\` that declares exactly the input selectors' params, i.e. adds
 * no cache dimension of its own. Used as the default when the concrete
 * keySelector type is unknown (a \`keySelectorCreator\`, or a hand-written
 * \`OutputCachedSelector<Inputs, Result>\`), so merging it back in is a no-op.
 */
type DefaultKeySelector<InputSelectors extends SelectorArray> = Selector<GetStateFromSelectors<InputSelectors>, unknown, GetParamsFromSelectors<InputSelectors>>;
/**
 * The arguments the finished selector accepts: the input selectors' params
 * merged with any extra params the \`keySelector\` declares.
 *
 * Appending the keySelector to the selector array and reusing reselect's own
 * \`GetParamsFromSelectors\` keeps one merge implementation instead of a
 * hand-rolled one — reselect takes the longest params tuple and intersects it
 * element-wise, which is exactly the desired semantics: the caller has to
 * satisfy the input selectors *and* the keySelector, since both receive the
 * same arguments at runtime.
 */
type CachedSelectorParams<InputSelectors extends SelectorArray, KeySelectorFn> = KeySelectorFn extends ((...args: any[]) => any) ? GetParamsFromSelectors<[...InputSelectors, KeySelectorFn]> : GetParamsFromSelectors<InputSelectors>;
/**
 * A function which receives the selector's inputSelectors/resultFunc/keySelector
 * and returns the keySelector to be used at runtime.
 */
type KeySelectorCreator<InputSelectors extends SelectorArray, Result> = (selectorInputs: {
  inputSelectors: InputSelectors;
  resultFunc: Combiner<InputSelectors, Result>;
  keySelector?: TypedKeySelector<InputSelectors>;
}) => TypedKeySelector<InputSelectors>;
type CreateCachedSelectorOptions<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = {
  keySelector?: KeySelectorFn;
  cacheObject?: ICacheObject;
  selectorCreator?: CreateSelectorFunction<any, any, any>;
  keySelectorCreator?: KeySelectorCreator<InputSelectors, Result>;
};
/**
 * The selector instance returned by \`createCachedSelector(...)(...)\`.
 *
 * This type is reconstructed from a plain reselect \`Selector\` plus **only** the
 * members re-reselect actually attaches at runtime (see
 * \`createCachedSelector.ts\`'s \`Object.assign\`). It intentionally does **not**
 * inherit reselect's full \`OutputSelector\`: that would advertise members which
 * only exist on the inner, per-cache-key reselect selectors (\`memoizedResultFunc\`,
 * \`lastResult\`, \`dependencyRecomputations\`, \`resetDependencyRecomputations\`,
 * \`memoize\`, \`argsMemoize\`, …) — they are absent on the cached selector at
 * runtime, so surfacing them would type-check and then crash.
 *
 * \`getMatchingSelector\` returns the full \`OutputSelector\` because the inner
 * cached selector genuinely is a reselect selector.
 *
 * \`.keySelector\` is exposed using the loose \`KeySelector<State>\` shape rather
 * than the precise \`TypedKeySelector<InputSelectors>\` for back-compat with
 * consumers that test the type against \`KeySelector<State>\`.
 */
type OutputCachedSelector<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = Selector<GetStateFromSelectors<InputSelectors>, Result, CachedSelectorParams<InputSelectors, KeySelectorFn>> & Pick<OutputSelector<InputSelectors, Result>, 'resultFunc' | 'dependencies' | 'recomputations' | 'resetRecomputations'> & {
  getMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeySelectorFn>) => OutputSelector<InputSelectors, Result>;
  removeMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeySelectorFn>) => void;
  clearCache: () => void;
  cache: ICacheObject;
  keySelector: KeySelector<GetStateFromSelectors<InputSelectors>>;
};
/**
 * The curried second-call argument: a \`keySelector\` function or an options object.
 */
type PolymorphicCachedOptions<InputSelectors extends SelectorArray, Result, KeySelectorFn = DefaultKeySelector<InputSelectors>> = KeySelectorFn | CreateCachedSelectorOptions<InputSelectors, Result, KeySelectorFn>;
/**
 * Message surfaced when input selectors mix a concrete \`state\` with an
 * implicit \`any\` one. It is the *parameter* type of the returned factory, so
 * the compiler prints the sentence itself at the \`(keySelector)\` call rather
 * than a bare "not callable".
 */
type ImplicitAnyStateError = '[re-reselect] Some input selectors have an implicitly \`any\` state while others are typed, so the combiner arguments and the result silently degrade to \`any\`. Annotate \`state\` on every input selector, or pre-type them with createCachedSelector.withTypes<State>().';
/**
 * The curried second call of \`createCachedSelector(...)\`.
 *
 * Generic over the supplied \`keySelector\` so a cache dimension declared only
 * there — re-reselect's signature pattern — flows into the finished selector's
 * own call signature (see {@link CachedSelectorParams}).
 *
 * Degrades to a single-parameter function typed with {@link ImplicitAnyStateError}
 * when {@link HasMixedAnyState} holds, turning what used to be a silent \`any\`
 * into a compile error that names the fix.
 */
type CachedSelectorFactory<InputSelectors extends SelectorArray, Result> = HasMixedAnyState<InputSelectors> extends true ? (error: ImplicitAnyStateError) => never : {
  <KeySelectorFn extends TypedKeySelector<InputSelectors>>(keySelector: KeySelectorFn): OutputCachedSelector<InputSelectors, Result, KeySelectorFn>;
  <KeySelectorFn extends TypedKeySelector<InputSelectors>>(options: CreateCachedSelectorOptions<InputSelectors, Result, KeySelectorFn>): OutputCachedSelector<InputSelectors, Result, KeySelectorFn>;
};
/**
 * Input selectors spread as individual arguments.
 *
 * Only available while \`StateType\` is still \`any\`. Once \`withTypes<State>()\`
 * has pinned it, reselect's tuple inference cannot both apply the contextual
 * state and infer the input tuple out of a variadic rest, and the combiner
 * arguments collapse to \`never\` — the call type-checks and produces a useless
 * selector. Dropping these signatures turns that into "No overload matches
 * this call" and points at the array form, which does work.
 */
interface VariadicCachedSelectorSignatures<StateType> {
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>]): CachedSelectorFactory<InputSelectors, Result>;
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>, createSelectorOptions: CreateSelectorOptions]): CachedSelectorFactory<InputSelectors, Result>;
}
/** Input selectors passed as a single array argument. Always available. */
interface ArrayCachedSelectorSignatures<StateType> {
  <InputSelectors extends SelectorArray<StateType>, Result>(inputSelectors: [...InputSelectors], combiner: Combiner<InputSelectors, Result>, createSelectorOptions?: CreateSelectorOptions): CachedSelectorFactory<InputSelectors, Result>;
}
/**
 * Just the callable signatures of \`createCachedSelector\`, without \`withTypes\`.
 * Split out so the runtime implementation can be typed against it directly
 * (TypeScript's \`Omit\` strips call signatures, so this can't be derived from
 * \`CreateCachedSelector\` after the fact).
 *
 * Tuple inference replaces the old per-arity overload duplication, mirroring
 * reselect's \`CreateSelectorFunction\` pattern.
 *
 * \`StateType\` is the state type shared by all input selectors. It defaults to
 * \`any\` and is narrowed via \`withTypes\` to pre-type the selector creator.
 */
type CreateCachedSelectorImpl<StateType = any> = (IsAny<StateType> extends true ? VariadicCachedSelectorSignatures<StateType> : unknown) & ArrayCachedSelectorSignatures<StateType>;
/**
 * The full \`createCachedSelector\` surface: callable signatures plus the
 * \`withTypes\` helper for pre-typing the state.
 */
type CreateCachedSelector<StateType = any> = CreateCachedSelectorImpl<StateType> & {
  /**
   * Creates a "pre-typed" version of \`createCachedSelector\` where the \`state\`
   * type is predefined.
   *
   * This lets you set the \`state\` type once, removing the need to specify it
   * on every input selector across all \`createCachedSelector\` calls.
   *
   * Pre-typed creators accept the array form of input selectors only.
   *
   * @returns A pre-typed \`createCachedSelector\` with the state type baked in.
   */
  withTypes: <OverrideStateType extends StateType>() => CreateCachedSelector<OverrideStateType>;
};
//#endregion
//#region src/createCachedSelector.d.ts
declare const createCachedSelector: CreateCachedSelector;
//#endregion
//#region src/createStructuredCachedSelector.d.ts
/**
 * The returned thunk preserves the cached-selector public surface
 * (\`getMatchingSelector\`, \`removeMatchingSelector\`, \`clearCache\`, \`cache\`,
 * \`keySelector\`, plus reselect's \`OutputSelector\` fields) and exposes
 * the structured shape as the selector's \`Result\`.
 */
type StructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>> = (polymorphicOptions: PolymorphicCachedOptions<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>) => OutputCachedSelector<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>;
declare function createStructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>>(selectors: InputSelectorsObject): StructuredCachedSelector<InputSelectorsObject>;
//#endregion
//#region src/cache/FlatObjectCache.d.ts
declare class FlatObjectCache implements ICacheObject {
  private _cache;
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/FifoObjectCache.d.ts
declare class FifoObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/LruObjectCache.d.ts
declare class LruObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
  private _registerCacheHit;
  private _deleteCacheHit;
}
//#endregion
//#region src/cache/FlatMapCache.d.ts
declare class FlatMapCache implements ICacheObject {
  private _cache;
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/FifoMapCache.d.ts
declare class FifoMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/LruMapCache.d.ts
declare class LruMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
export { type CachedSelectorFactory, type CachedSelectorParams, type CreateCachedSelector, type CreateCachedSelectorOptions, type DefaultKeySelector, FifoMapCache, FifoObjectCache, FlatMapCache, FlatObjectCache, type ICacheObject, type ImplicitAnyStateError, type KeySelector, type KeySelectorCreator, LruMapCache, LruObjectCache, type OutputCachedSelector, type TypedKeySelector, createCachedSelector, createStructuredCachedSelector };
//# sourceMappingURL=index.d.mts.map"
`;

exports[`published artifacts > dist/es/index.legacy-esm.js is unchanged 1`] = `
"import { createSelector, createStructuredSelector } from "reselect";
//#region src/cache/util/isStringOrNumber.ts
function isStringOrNumber(value) {
	return typeof value === "string" || typeof value === "number";
}
//#endregion
//#region src/cache/FlatObjectCache.ts
var FlatObjectCache = class {
	constructor() {
		this._cache = {};
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
	}
	get(key) {
		return this._cache[key];
	}
	remove(key) {
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
};
//#endregion
//#region src/createCachedSelector.ts
const defaultCacheKeyValidator = () => true;
function isFunction(value) {
	return typeof value === "function";
}
function parseReselectArgs(reselectArgs) {
	const args = [...reselectArgs];
	const last = args.pop();
	let resultFunc;
	let createSelectorOptions;
	if (isFunction(last)) {
		resultFunc = last;
		createSelectorOptions = void 0;
	} else {
		resultFunc = args.pop();
		createSelectorOptions = last;
	}
	return {
		inputSelectors: Array.isArray(args[0]) ? args[0] : args,
		resultFunc,
		createSelectorOptions
	};
}
const createCachedSelectorImpl = ((...reselectArgs) => {
	const { inputSelectors, resultFunc, createSelectorOptions } = parseReselectArgs(reselectArgs);
	return (polymorphicOptions) => {
		var _options$cacheObject, _options$selectorCrea, _cache$isValidCacheKe;
		const options = isFunction(polymorphicOptions) ? { keySelector: polymorphicOptions } : { ...polymorphicOptions };
		let recomputations = 0;
		const resultFuncWithRecomputations = (...args) => {
			recomputations++;
			return resultFunc(...args);
		};
		const patchedReselectArgs = [inputSelectors, resultFuncWithRecomputations];
		if (createSelectorOptions) patchedReselectArgs.push(createSelectorOptions);
		const cache = (_options$cacheObject = options.cacheObject) !== null && _options$cacheObject !== void 0 ? _options$cacheObject : new FlatObjectCache();
		const selectorCreator = (_options$selectorCrea = options.selectorCreator) !== null && _options$selectorCrea !== void 0 ? _options$selectorCrea : createSelector;
		const isValidCacheKey = (_cache$isValidCacheKe = cache.isValidCacheKey) !== null && _cache$isValidCacheKe !== void 0 ? _cache$isValidCacheKe : defaultCacheKeyValidator;
		if (options.keySelectorCreator) options.keySelector = options.keySelectorCreator({
			keySelector: options.keySelector,
			inputSelectors,
			resultFunc
		});
		if (!isFunction(options.keySelector)) throw new Error("[re-reselect] Missing \\"keySelector\\": provide a \`keySelector\` function or a \`keySelectorCreator\` that returns one.");
		const keySelector = options.keySelector;
		function selector(...args) {
			const cacheKey = keySelector(...args);
			if (!isValidCacheKey(cacheKey)) {
				console.warn(\`[re-reselect] Invalid cache key "\${String(cacheKey)}" has been returned by keySelector function.\`);
				return;
			}
			let cacheResponse = cache.get(cacheKey);
			if (!cacheResponse) {
				cacheResponse = selectorCreator(...patchedReselectArgs);
				cache.set(cacheKey, cacheResponse);
			}
			return cacheResponse(...args);
		}
		return Object.assign(selector, {
			getMatchingSelector: (...args) => {
				const cacheKey = keySelector(...args);
				return cache.get(cacheKey);
			},
			removeMatchingSelector: (...args) => {
				const cacheKey = keySelector(...args);
				cache.remove(cacheKey);
			},
			clearCache: () => {
				cache.clear();
			},
			resultFunc,
			dependencies: inputSelectors,
			cache,
			recomputations: () => recomputations,
			resetRecomputations: () => {
				recomputations = 0;
			},
			keySelector
		});
	};
});
const createCachedSelector = Object.assign(createCachedSelectorImpl, { withTypes: () => createCachedSelector });
//#endregion
//#region src/createStructuredCachedSelector.ts
function createStructuredCachedSelector(selectors) {
	return createStructuredSelector(selectors, createCachedSelector);
}
//#endregion
//#region src/cache/util/validateCacheSize.ts
function validateCacheSize(cacheSize) {
	if (cacheSize === void 0) throw new Error("Missing the required property \\"cacheSize\\".");
	if (!Number.isInteger(cacheSize) || cacheSize <= 0) throw new Error("The \\"cacheSize\\" property must be a positive integer value.");
}
//#endregion
//#region src/cache/FifoObjectCache.ts
var FifoObjectCache = class {
	constructor(options) {
		this._cache = {};
		this._cacheOrdering = [];
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
		this._cacheOrdering.push(key);
		if (this._cacheOrdering.length > this._cacheSize) {
			const earliest = this._cacheOrdering[0];
			this.remove(earliest);
		}
	}
	get(key) {
		return this._cache[key];
	}
	remove(key) {
		const index = this._cacheOrdering.indexOf(key);
		if (index > -1) this._cacheOrdering.splice(index, 1);
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
		this._cacheOrdering = [];
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
};
//#endregion
//#region src/cache/LruObjectCache.ts
var LruObjectCache = class {
	constructor(options) {
		this._cache = {};
		this._cacheOrdering = [];
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
		this._registerCacheHit(key);
		if (this._cacheOrdering.length > this._cacheSize) {
			const earliest = this._cacheOrdering[0];
			this.remove(earliest);
		}
	}
	get(key) {
		this._registerCacheHit(key);
		return this._cache[key];
	}
	remove(key) {
		this._deleteCacheHit(key);
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
		this._cacheOrdering = [];
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
	_registerCacheHit(key) {
		this._deleteCacheHit(key);
		this._cacheOrdering.push(key);
	}
	_deleteCacheHit(key) {
		const index = this._cacheOrdering.indexOf(key);
		if (index > -1) this._cacheOrdering.splice(index, 1);
	}
};
//#endregion
//#region src/cache/FlatMapCache.ts
var FlatMapCache = class {
	constructor() {
		this._cache = /* @__PURE__ */ new Map();
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
	}
	get(key) {
		return this._cache.get(key);
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
//#region src/cache/FifoMapCache.ts
var FifoMapCache = class {
	constructor(options) {
		this._cache = /* @__PURE__ */ new Map();
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
		if (this._cache.size > this._cacheSize) {
			const earliest = this._cache.keys().next().value;
			this.remove(earliest);
		}
	}
	get(key) {
		return this._cache.get(key);
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
//#region src/cache/LruMapCache.ts
var LruMapCache = class {
	constructor(options) {
		this._cache = /* @__PURE__ */ new Map();
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
		if (this._cache.size > this._cacheSize) {
			const earliest = this._cache.keys().next().value;
			this.remove(earliest);
		}
	}
	get(key) {
		const value = this._cache.get(key);
		if (this._cache.has(key)) {
			this.remove(key);
			this._cache.set(key, value);
		}
		return value;
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
export { FifoMapCache, FifoObjectCache, FlatMapCache, FlatObjectCache, LruMapCache, LruObjectCache, createCachedSelector, createStructuredCachedSelector };

//# sourceMappingURL=index.legacy-esm.js.map"
`;

exports[`published artifacts > dist/umd/index.umd.js is unchanged 1`] = `
"(function(global, factory) {
	typeof exports === "object" && typeof module !== "undefined" ? factory(exports, require("reselect")) : typeof define === "function" && define.amd ? define(["exports", "reselect"], factory) : (global = typeof globalThis !== "undefined" ? globalThis : global || self, factory(global["Re-reselect"] = {}, global.Reselect));
})(this, function(exports, reselect) {
	Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
	//#region src/cache/util/isStringOrNumber.ts
	function isStringOrNumber(value) {
		return typeof value === "string" || typeof value === "number";
	}
	//#endregion
	//#region src/cache/FlatObjectCache.ts
	var FlatObjectCache = class {
		constructor() {
			this._cache = {};
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
		}
		get(key) {
			return this._cache[key];
		}
		remove(key) {
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
	};
	//#endregion
	//#region src/createCachedSelector.ts
	const defaultCacheKeyValidator = () => true;
	function isFunction(value) {
		return typeof value === "function";
	}
	function parseReselectArgs(reselectArgs) {
		const args = [...reselectArgs];
		const last = args.pop();
		let resultFunc;
		let createSelectorOptions;
		if (isFunction(last)) {
			resultFunc = last;
			createSelectorOptions = void 0;
		} else {
			resultFunc = args.pop();
			createSelectorOptions = last;
		}
		return {
			inputSelectors: Array.isArray(args[0]) ? args[0] : args,
			resultFunc,
			createSelectorOptions
		};
	}
	const createCachedSelectorImpl = ((...reselectArgs) => {
		const { inputSelectors, resultFunc, createSelectorOptions } = parseReselectArgs(reselectArgs);
		return (polymorphicOptions) => {
			var _options$cacheObject, _options$selectorCrea, _cache$isValidCacheKe;
			const options = isFunction(polymorphicOptions) ? { keySelector: polymorphicOptions } : { ...polymorphicOptions };
			let recomputations = 0;
			const resultFuncWithRecomputations = (...args) => {
				recomputations++;
				return resultFunc(...args);
			};
			const patchedReselectArgs = [inputSelectors, resultFuncWithRecomputations];
			if (createSelectorOptions) patchedReselectArgs.push(createSelectorOptions);
			const cache = (_options$cacheObject = options.cacheObject) !== null && _options$cacheObject !== void 0 ? _options$cacheObject : new FlatObjectCache();
			const selectorCreator = (_options$selectorCrea = options.selectorCreator) !== null && _options$selectorCrea !== void 0 ? _options$selectorCrea : reselect.createSelector;
			const isValidCacheKey = (_cache$isValidCacheKe = cache.isValidCacheKey) !== null && _cache$isValidCacheKe !== void 0 ? _cache$isValidCacheKe : defaultCacheKeyValidator;
			if (options.keySelectorCreator) options.keySelector = options.keySelectorCreator({
				keySelector: options.keySelector,
				inputSelectors,
				resultFunc
			});
			if (!isFunction(options.keySelector)) throw new Error("[re-reselect] Missing \\"keySelector\\": provide a \`keySelector\` function or a \`keySelectorCreator\` that returns one.");
			const keySelector = options.keySelector;
			function selector(...args) {
				const cacheKey = keySelector(...args);
				if (!isValidCacheKey(cacheKey)) {
					console.warn(\`[re-reselect] Invalid cache key "\${String(cacheKey)}" has been returned by keySelector function.\`);
					return;
				}
				let cacheResponse = cache.get(cacheKey);
				if (!cacheResponse) {
					cacheResponse = selectorCreator(...patchedReselectArgs);
					cache.set(cacheKey, cacheResponse);
				}
				return cacheResponse(...args);
			}
			return Object.assign(selector, {
				getMatchingSelector: (...args) => {
					const cacheKey = keySelector(...args);
					return cache.get(cacheKey);
				},
				removeMatchingSelector: (...args) => {
					const cacheKey = keySelector(...args);
					cache.remove(cacheKey);
				},
				clearCache: () => {
					cache.clear();
				},
				resultFunc,
				dependencies: inputSelectors,
				cache,
				recomputations: () => recomputations,
				resetRecomputations: () => {
					recomputations = 0;
				},
				keySelector
			});
		};
	});
	const createCachedSelector = Object.assign(createCachedSelectorImpl, { withTypes: () => createCachedSelector });
	//#endregion
	//#region src/createStructuredCachedSelector.ts
	function createStructuredCachedSelector(selectors) {
		return (0, reselect.createStructuredSelector)(selectors, createCachedSelector);
	}
	//#endregion
	//#region src/cache/util/validateCacheSize.ts
	function validateCacheSize(cacheSize) {
		if (cacheSize === void 0) throw new Error("Missing the required property \\"cacheSize\\".");
		if (!Number.isInteger(cacheSize) || cacheSize <= 0) throw new Error("The \\"cacheSize\\" property must be a positive integer value.");
	}
	//#endregion
	//#region src/cache/FifoObjectCache.ts
	var FifoObjectCache = class {
		constructor(options) {
			this._cache = {};
			this._cacheOrdering = [];
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
			this._cacheOrdering.push(key);
			if (this._cacheOrdering.length > this._cacheSize) {
				const earliest = this._cacheOrdering[0];
				this.remove(earliest);
			}
		}
		get(key) {
			return this._cache[key];
		}
		remove(key) {
			const index = this._cacheOrdering.indexOf(key);
			if (index > -1) this._cacheOrdering.splice(index, 1);
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
			this._cacheOrdering = [];
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
	};
	//#endregion
	//#region src/cache/LruObjectCache.ts
	var LruObjectCache = class {
		constructor(options) {
			this._cache = {};
			this._cacheOrdering = [];
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
			this._registerCacheHit(key);
			if (this._cacheOrdering.length > this._cacheSize) {
				const earliest = this._cacheOrdering[0];
				this.remove(earliest);
			}
		}
		get(key) {
			this._registerCacheHit(key);
			return this._cache[key];
		}
		remove(key) {
			this._deleteCacheHit(key);
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
			this._cacheOrdering = [];
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
		_registerCacheHit(key) {
			this._deleteCacheHit(key);
			this._cacheOrdering.push(key);
		}
		_deleteCacheHit(key) {
			const index = this._cacheOrdering.indexOf(key);
			if (index > -1) this._cacheOrdering.splice(index, 1);
		}
	};
	//#endregion
	//#region src/cache/FlatMapCache.ts
	var FlatMapCache = class {
		constructor() {
			this._cache = /* @__PURE__ */ new Map();
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
		}
		get(key) {
			return this._cache.get(key);
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	//#region src/cache/FifoMapCache.ts
	var FifoMapCache = class {
		constructor(options) {
			this._cache = /* @__PURE__ */ new Map();
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
			if (this._cache.size > this._cacheSize) {
				const earliest = this._cache.keys().next().value;
				this.remove(earliest);
			}
		}
		get(key) {
			return this._cache.get(key);
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	//#region src/cache/LruMapCache.ts
	var LruMapCache = class {
		constructor(options) {
			this._cache = /* @__PURE__ */ new Map();
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
			if (this._cache.size > this._cacheSize) {
				const earliest = this._cache.keys().next().value;
				this.remove(earliest);
			}
		}
		get(key) {
			const value = this._cache.get(key);
			if (this._cache.has(key)) {
				this.remove(key);
				this._cache.set(key, value);
			}
			return value;
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	exports.FifoMapCache = FifoMapCache;
	exports.FifoObjectCache = FifoObjectCache;
	exports.FlatMapCache = FlatMapCache;
	exports.FlatObjectCache = FlatObjectCache;
	exports.LruMapCache = LruMapCache;
	exports.LruObjectCache = LruObjectCache;
	exports.createCachedSelector = createCachedSelector;
	exports.createStructuredCachedSelector = createStructuredCachedSelector;
});

//# sourceMappingURL=index.umd.js.map"
`;
